tests/error/errors_on_usage/var_in_modifier2.err
Error: Variable assigned in modifier block (at $FILE:18:8)
   | 
16 | 
17 |     measure(q)
18 |     x = a
   |         ^ `a` cannot be used...

Note:
   | 
12 |     with power(3):
13 |         a = 3
   |         ----- ... since it was defined in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
